--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-#src/templates/**.html
+src/templates/*/*.html
 .idea
 *.pdf
 *.ics
