Add missing env in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,19 @@ services:
     environment:
       - PORT=${API_PORT}
       - HOST=${API_HOST}
-      - MAIL_HOST=${MAIL_HOST}
-      - MAIL_TEMPLATE_PATH=${MAIL_TEMPLATE_PATH}
-      - MAIL_TEMPLATE_NAME=${MAIL_TEMPLATE_NAME}
-      - FORM_TEMPLATE_PATH=${FORM_TEMPLATE_PATH}
-      - FORM_TEMPLATE_NAME=${FORM_TEMPLATE_NAME}
-      - MAIL_SENDER_NAME=${MAIL_SENDER_NAME}
-      - MAIL_PASSWORD=${MAIL_PASSWORD}
-      - MAIL_ADDRESS=${MAIL_ADDRESS}
-      - MAIL_PORT=${MAIL_PORT}
+      - API_URL=${API_URL}
       - CHROMIUM_PATH=${CHROMIUM_PATH}
+      - DEBUG=${DEBUG}
+      - FORM_TEMPLATE_NAME=${FORM_TEMPLATE_NAME}
+      - FORM_TEMPLATE_PATH=${FORM_TEMPLATE_PATH}
+      - MAIL_ADDRESS=${MAIL_ADDRESS}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_PORT=${MAIL_PORT}
+      - MAIL_SENDER_NAME=${MAIL_SENDER_NAME}
+      - MAIL_SUBJECT=${MAIL_SUBJECT}
+      - MAIL_TEMPLATE_NAME=${MAIL_TEMPLATE_NAME}
+      - MAIL_TEMPLATE_PATH=${MAIL_TEMPLATE_PATH}
       - PDF_OUTPUT_PATH=${PDF_OUTPUT_PATH}
     volumes:
       - forms-volume:/app/src/templates:ro
