--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: form-confirmation-api
+    restart: unless-stopped
     ports:
       - ${API_PORT_OUT}:${API_PORT}
     environment:
