Add docker vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - PORT=${API_PORT}
       - HOST=${API_HOST}
       - API_URL=${API_URL}
+      - APP_URL=${APP_URL}
+      - ICAL_EVENT=${ICAL_EVENT}
       - CHROMIUM_PATH=${CHROMIUM_PATH}
       - DEBUG=${DEBUG}
       - FORM_TEMPLATE_NAME=${FORM_TEMPLATE_NAME}
@@ -21,6 +23,8 @@ services:
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - MAIL_PORT=${MAIL_PORT}
       - MAIL_SENDER_NAME=${MAIL_SENDER_NAME}
+      - MAIL_SENDER_EMAIL=${MAIL_SENDER_EMAIL}
+      - MAIL_SECURE=${MAIL_SECURE}
       - MAIL_SUBJECT=${MAIL_SUBJECT}
       - MAIL_TEMPLATE_NAME=${MAIL_TEMPLATE_NAME}
       - MAIL_TEMPLATE_PATH=${MAIL_TEMPLATE_PATH}
